# media-transcriber-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: main.rs
src/audio/: mod.rs  utils.rs  whisper.rs
src/screenshot/: mod.rs
src/sources/: instagram.rs  mod.rs  reddit.rs  tiktok.rs  twitter.rs  vimeo.rs  youtube.rs  ytdlp.rs
src/transcriber/: mod.rs
