[package]
name = "media-transcriber-mcp"
version = "0.7.3"
edition = "2024"
authors = ["raultov <raultov@protonmail.com>"]
description = "MCP server for transcribing local video and audio files using Whisper"
license = "MIT"
homepage = "https://github.com/raultov/media-transcriber-mcp"
repository = "https://github.com/raultov/media-transcriber-mcp"
readme = "README.md"
keywords = ["mcp", "whisper", "transcription", "audio", "video"]
categories = ["multimedia::audio", "multimedia::video"]

[dependencies]
rust-mcp-sdk = { version = "0.8.3", features = ["server", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
whisper-rs = "0.11.1"
anyhow = "1.0.86"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
hound = "3.5.1"
tempfile = "3.10.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
base64 = "0.22.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
